--- a/src/StraightSql/project.json
+++ b/src/StraightSql/project.json
@@ -1,20 +1,17 @@
 ﻿{
 	"authors": [ "baker" ],
 	"dependencies": {
+		"Microsoft.CSharp": "4.0.1-beta-23516",
+		"System.Collections": "4.0.11-beta-23516",
+		"System.Linq": "4.0.1-beta-23516",
+		"System.Runtime": "4.0.21-beta-23516",
+		"System.Threading": "4.0.11-beta-23516",
 		"Npgsql": "3.1.0-alpha6"
 	},
 	"description": "StraightSql Class Library",
 	"frameworks": {
 		"dnx46": { },
-		"dnxcore50": {
-			"dependencies": {
-				"Microsoft.CSharp": "4.0.1-beta-23516",
-				"System.Collections": "4.0.11-beta-23516",
-				"System.Linq": "4.0.1-beta-23516",
-				"System.Runtime": "4.0.21-beta-23516",
-				"System.Threading": "4.0.11-beta-23516"
-			}
-		}
+		"dnxcore50": { }
 	},
 	"projectUrl": "https://github.com/brendanjbaker/StraightSQL",
 	"version": "0.14"
