--- a/src/StraightSql/project.json
+++ b/src/StraightSql/project.json
@@ -3,6 +3,7 @@
 	"dependencies": {
 		"Microsoft.CSharp": "4.0.1-beta-23516",
 		"System.Collections": "4.0.11-beta-23516",
+		"System.Data.Common": "4.0.1-beta-23516",
 		"System.Linq": "4.0.1-beta-23516",
 		"System.Runtime": "4.0.21-beta-23516",
 		"System.Threading": "4.0.11-beta-23516",
