--- a/src/StraightSql.Composition.SimpleInjector/StraightSql.Composition.SimpleInjector.csproj
+++ b/src/StraightSql.Composition.SimpleInjector/StraightSql.Composition.SimpleInjector.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\StraightSql\StraightSql.csproj" />
+    <ProjectReference Include="..\StraightSql\StraightSql.csproj" />
   </ItemGroup>
 
 </Project>
