StraightSql.Core project: IDatabase interface, along with IFeatureCollection and IFeatures interfaces.

--- a/StraightSql/StraightSql.csproj
+++ b/StraightSql/StraightSql.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StraightSql.Core\StraightSql.Core.csproj" />
+  </ItemGroup>
+
 </Project>
